erreurs réparées mais les switches/ponts ne marchent pas